<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Welcome to Favorite TV!</string>
    <string name="app_name">Favorite TV</string>
    <string name="title_activity_bonjour_servers">BonjourServers</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="file_scanning">Scanning Files..</string>
    <string name="server_searching">Searching PC..</string>
    <string name="clean_space">Clear</string>

    <!-- MAIN -->
    <string name="auto_connect">Connecting...</string>
    <string name="total_info">Totally %1$s File(s), %2$s</string>
    <string name="period">Period from %1$s to %2$s</string>
    <string name="videos">%1$d video(s)</string>
    <string name="audios">%1$d audio(s)</string>
    <string name="photos">%1$d photo(s)</string>
    <string name="can_not_find_server">Can\'t find your PC now. We will connect again automatically later!</string>
    <string name="connect_a_pc">Connect to a PC</string>
    

    <!-- PAIRED SERVERS -->
    <string name="backuping">Backing up ...</string>
    <string name="offline">OFFLINE</string>
    <string name="backuped_completed">Backup Completed</string>
    <string name="backup_period">BACKUP FROM %1$s TO %2$s</string>
    <string name="free_space">Free Space %1$s</string>
    <string name="backup_folder">Backup Folder %1$s</string>
    <string name="backup_info">Backed-up %1$d photo(s), %2$d video(s), %3$d audio(s)</string>
    <string name="backup_last_local_time">Last Sync Time %1$s</string>
    <string name="backup_linked">Linked To %1$s</string>
    <string name="backup_wait_for_linked">Wait For link to %1$s</string>    
    

    <!-- PROGRESS INFO -->
    <string name="backup_info_empty">Backing Up ....</string>
    <string name="backup_progress">Auto Backing up...\n%1$d File(s) for back up</string>
    <string name="backup_wait"> %1$d File(s) for back up</string>
    <string name="backup_done">All Files backed up</string>
    <string name="backup_uncompleted">Backup Uncompleted</string>


    <!-- FIRST USE -->
    <!-- INSTALL -->
    <string name="simple_description">EASIEST BACKUP APP</string>
    <string name="simple_description1">When you\'re home</string>
    <string name="simple_description2">all contents will be backed-up automatically.</string>
    <string name="download_windows">download windows version</string>
    <string name="download_url">http://cdn.waveface.com/WindowsStation/Bunny-installer.exe</string>
    <string name="email_description">Email Link to Me</string>
    <string name="install_finding_server">Finding PCs.....</string>
    <string name="install_dialog_title">Can\'t Find Your PC</string>
    <string name="install_dialog_send_mail">Have you install Windows App？</string>
    <string name="install_dialog_go_install">Receive Email at your PC 上, download from the link and install.</string>

    <!-- EMAIL -->
    <string name="email_subject">Bunny backup app Windows Free download link</string>
    <string name="email_content">
<![CDATA[
            <p>Please visit our website to download our FREE Windows app<p>
    	    <p><a href=\"https://waveface.com/en/bunny/\">https://waveface.com/en/bunny/</a><p>
			<p>Once you install the Windows version, connect your phone and it’s done.<p> 
			<p>If you bump into any problems or have further questions please contact: support@waveface.com<p>
			<p>Cheers,<p>
			<p>Waveface Team<p>]]>
    </string>

    <!-- BONHOUR SERVER CHOOSE -->
    <string name="choose_server">Select a PC</string>
    <string name="pairing">Please go to your PC to confirm the connection</string>
    <string name="title_pairing">Message</string>
    <string name="pairing_wait">Please go to your PC to confirm the connection</string>
    <string name="pairing_denied">Connection denied.</string>
    <string name="pairing_starting_backup">Backup your files now.</string>
    <string name="network_state">No Wi-Fi Network</string>
    <string name="without_wifi">You have to turn on Wi-Fi</string>
    <string name="user_pc">User-PCNAME</string>

    <!-- FILE TRANSFRING -->
    <string name="file_transfering">%1$s transfering files</string>
    <string name="backup_view_descript11">The first backup takes awhile</string>
    <string name="backup_view_descript12">Sit back and relax</string>
    <string name="backup_view_descript21">From now on all your</string>
    <string name="backup_view_descript22">photos, videos and audios</string>
    <string name="backup_view_descript23">will be backup to your PC automatically through Wi-Fi everyday!</string>

    <!-- CLEAN STORAGE -->
    <string name="clean_title">Choose Keep Pattern(%1$s)</string>
    <string name="clean_keep_three_months">Keep recent 3 Months</string>
    <string name="clean_keep_six_months">Keep recent half year</string>
    <string name="clean_setting_time">Setup Keep Time</string>
    <string name="clean_freespace">You\'ll get more %1$s space</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="photo">Photo</string>

    <!-- ADD SERVER -->
    <string name="add_new_pc">Add a new PC</string>
    <string name="paired_pc">Connected PC</string>


    <!-- BUTTON -->
    <string name="btn_back">Back</string>
    <string name="btn_next">Next</string>
    <string name="btn_confirm">Sure</string>
    <string name="btn_backup">Go Backup</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>

    <!-- NOTIFICATION -->
    <string name="notify_link_server">Link to %1$s, %2$s File(s) wait for back up </string>
    <string name="notify_backup_status"> %1$d file(s) Backed-up.</string>
    <string name="title_activity_image_view">ImageViewActivity</string>

    <!-- PREFERENCE -->
    <!-- SETTING -->
    <string name="setting_title">Settings</string>
    <string name="setting_change_pc">Change PC to Back up</string>
    <string name="setting_current">Current Paired PC : </string>
    <!-- ABOUT -->
    <string name="support_email">supportd@waveface.com</string>   
    <string name="about">About us</string>
    <string name="support">Contact us</string>
    <string name="version">Version </string>
    <string name="add_pc_content">You just can backup to one pc one time.Files will not back up to Pc which you connected before.</string>
    
    <!-- SYNC FRAGMENT -->
    <string name="sync_title">Favorite TV </string>
    <string name="sync_content_connect_server">Conecting server</string>
    <string name="sync_content_one_more">Your favorites will be ready in %1$s minutes</string>
    <string name="sync_content_one">Your favorites will be ready in 1 minute</string>

    <!-- PLAYBACK FRAGMENT  -->
    <string name="everything_played">Everything played</string>
    
    <!-- TAB INFOS  -->
    <string name="favorite">Favorite</string>
    <string name="recent_photos">Recent Photos</string>
    <string name="recent_videos">Recent Videos</string>
    
    <!-- OVERVIEW FRAGMENT  -->
    <string name="no_favorite">No favorites now</string>
    <string name="no_photo">No photos now</string>
    <string name="no_video">No videos now</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="thisweek">This week</string>
    
</resources>