<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_dialog">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:src="@drawable/ic_pairing" />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="#33CCFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/simple_description"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:textColor="#33CCFF"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/llBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/btn_next" />

	</LinearLayout>

    <RelativeLayout
        android:id="@+id/frameSendLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_above="@+id/llBtns"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:background="#3D3D3D" >

        <Button
            android:id="@+id/btnSendLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/email_description" />

        <TextView
            android:id="@+id/tvWording21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvWording22"
            android:layout_centerHorizontal="true"
            android:text="@string/download_windows"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tvWording22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnSendLink"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/download_url"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tvWording11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/simple_description1"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tvWording12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvWording11"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/simple_description2"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

</RelativeLayout>