<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="#000000">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:src="@drawable/ic_pairing" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pbSearch"
        android:layout_below="@+id/textView1"
        android:layout_margin="20dp"
        android:divider="#00FF00"
        android:dividerHeight="2px" >
    </ListView>

    <ProgressBar
        android:id="@+id/pbSearch"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@+id/llBtns"
        android:layout_alignLeft="@+id/listview" />

    <TextView
        android:id="@+id/tvSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pbSearch"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/pbSearch"
        android:text="@string/server_searching"
        android:textColor="#33CCFF" />

    <LinearLayout
        android:id="@+id/llBtns"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/listview"
        android:layout_alignRight="@+id/listview"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" >

        <Button
            android:id="@+id/btnPre"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_back" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_backup" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/choose_server"
        android:textColor="#33CCFF"
        android:textSize="18sp" />

</RelativeLayout>