<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="0dp"
        android:src="@drawable/ic_pairing" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_alignParentLeft="true"
        android:text="@string/add_new_pc"
        style="@style/HighlightText"/>
    
    <RelativeLayout 
        android:id="@+id/rlNewServer"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"        
        android:background="#000000"
        android:layout_below="@+id/textView1"
 
        android:layout_centerHorizontal="true">
    
    <ListView
        android:id="@+id/newServerListview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
  		android:drawSelectorOnTop="false"
  		android:listSelector="@drawable/server_chosed"
  		android:cacheColorHint="@android:color/transparent"
  		android:clickable="true"
  		android:divider="#00FF00"
        android:dividerHeight="2dp" />
    
    </RelativeLayout>
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlNewServer"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:text="@string/paired_pc"
        style="@style/HighlightText"/>
    
    <RelativeLayout 
        android:id="@+id/rlPairedServer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"        
        android:background="#000000"
        android:layout_above="@+id/llBtns"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true">
    
    <ListView
        android:id="@+id/pairedServerListview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
  		android:drawSelectorOnTop="false"
  		android:listSelector="@drawable/server_chosed"
  		android:cacheColorHint="@android:color/transparent"
  		android:clickable="true"
  		android:divider="#00FF00"
        android:dividerHeight="2dp"/>
    
    </RelativeLayout>
    
    
    <LinearLayout
        android:id="@+id/llBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_click"
            android:text="@string/btn_cancel"
            android:textColor="#FFFFFF"
            android:textSize="24sp"/>
    </LinearLayout>


</RelativeLayout>